fix: also set overflow visible on .mpe-item/.mue-item when open so dropdown escapes

--- a/modules/mousepadeditor/views/css/mousepadeditor.css
+++ b/modules/mousepadeditor/views/css/mousepadeditor.css
@@ -181,6 +181,9 @@
   overflow: hidden;
   background: #fff;
 }
+.mpe-item.mpe-open {
+  overflow: visible;
+}
 
 .mpe-head {
   width: 100%;
