--- a/modules/mugeditor/views/css/mugeditor.css
+++ b/modules/mugeditor/views/css/mugeditor.css
@@ -181,6 +181,9 @@
   overflow: hidden;
   background: #fff;
 }
+.mue-item.mue-open {
+  overflow: visible;
+}
 
 .mue-head {
   width: 100%;
